# Education_Rag

./: README.md  pyproject.toml
memory/: software engineering.json  subject_software engineering.json
src/crewai_rag/: main.py
src/crewai_rag/crews/processing/: processing.py
src/crewai_rag/crews/processing/config/: agents.yaml  tasks.yaml
src/crewai_rag/crews/retrieval/: retrieval.py
src/crewai_rag/crews/retrieval/config/: agents.yaml  tasks.yaml
src/crewai_rag/tools/: __init__.py  chunking.py  embedding.py  generatingAns.py  pdf_extracting.py  retrieving.py  storing.py  text_structurer.py  validating.py
src/crewai_rag/utils/: custom_memory.py
